# tp-2020-1c-operativos

./: CMakeLists.txt  Makefile  README.md
Broker/: CMakeLists.txt  Makefile  broker.config
Broker/include/: broker_logs_manager.h  broker_memory_algorithms.h  broker_memory_manager.h  broker_signal_handler.h  cache_information_builder.h  connection_handler.h  dynamic_partition_message_allocator.h  fifo_partition_free_algorithm.h  first_fit_available_partition_search_algorithm.h  messages_roles.h  publisher.h  publisher_message_mode.h  queue_context_operations.h  queue_context_provider.h  queue_message_status.h  subscriber.h  subscriber_context_provider.h  subscriber_message_mode.h
Broker/src/: broker.c  broker_logs_manager.c  broker_memory_algorithms.c  broker_memory_manager.c  broker_sanitizer.c  broker_signal_handler.c  cache_information_builder.c  connection_handler.c  dynamic_partition_message_allocator.c  fifo_partition_free_algorithm.c  first_fit_available_partition_search_algorithm.c  messages_roles.c  publisher.c  publisher_message_mode.c  queue_context_operations.c  queue_context_provider.c  queue_message_status.c  subscriber.c  subscriber_context_provider.c  subscriber_message_mode.c
Gameboy/: CMakeLists.txt  Makefile  gameboy.config
Gameboy/include/: appeared_pokemon_operation_parser.h  catch_pokemon_operation_parser.h  caught_pokemon_operation_parser.h  entry_point_connection_builder.h  entry_point_executor.h  entry_point_logs_manager.h  entry_point_processes_information.h  entry_point_validator.h  get_pokemon_operation_parser.h  new_pokemon_operation_parser.h  pokemon_operation_parser.h  publisher_mode_strategy.h  role_mode_strategy.h  subscriber_mode_strategy.h
Gameboy/src/: appeared_pokemon_operation_parser.c  catch_pokemon_operation_parser.c  caught_pokemon_operation_parser.c  entry_point_connection_builder.c  entry_point_executor.c  entry_point_logs_manager.c  entry_point_processes_information.c  entry_point_validator.c  gameboy.c  gameboy_sanitizer.c  get_pokemon_operation_parser.c  new_pokemon_operation_parser.c  pokemon_operation_parser.c  publisher_mode_strategy.c  role_mode_strategy.c  subscriber_mode_strategy.c
Gamecard/: CMakeLists.txt  Makefile  gamecard.config
Gamecard/include/: broker_connection_handler.h  catch_query_performer.h  filesystem.h  gameboy_connection_handler.h  gamecard_configuration_manager.h  gamecard_logs_manager.h  gamecard_query_performers.h  gamecard_serializable_objects.h  get_query_performer.h  new_query_performer.h
Gamecard/src/: broker_connection_handler.c  catch_query_performer.c  filesystem.c  gameboy_connection_handler.c  gamecard.c  gamecard_configuration_manager.c  gamecard_logs_manager.c  gamecard_query_performers.c  gamecard_sanitizer.c  gamecard_serializable_objects.c  get_query_performer.c  new_query_performer.c
Team/: CMakeLists.txt  Makefile  team-RR.config  team-SJF-CD.config
Team/include/: appeared_query_performer.h  catch_action.h  caught_query_performer.h  dispatcher.h  dispatcher_queues.h  dispatching_reasons.h  distance_calculator.h  fifo_scheduling_algorithm.h  goal_calculator.h  localized_query_performer.h  main_threads_executor.h  movement_action.h  non_preemptive_sjf_scheduling_algorithm.h  pokemon_occurrence_trigger.h  pokemon_occurrences.h  preemptive_sjf_scheduling_algorithm.h  round_robin_scheduling_algorithm.h  scheduling_algorithm.h  scheduling_algorithm_finder.h  state_transitions.h  team_broker_connection_handler.h  team_configuration_manager.h  team_gameboy_connection_handler.h  team_logs_manager.h  team_manager.h  team_pretty_prints.h  team_query_performers.h  team_serializable_objects.h  trainer_thread_context_execution_cycle.h  trainer_thread_context_state_chained_evaluation.h  trainer_threads.h  trainers_parser.h  waiting_actions.h
Team/src/: appeared_query_performer.c  catch_action.c  caught_query_performer.c  dispatcher.c  dispatcher_queues.c  dispatching_reasons.c  distance_calculator.c  fifo_scheduling_algorithm.c  goal_calculator.c  localized_query_performer.c  main_threads_executor.c  movement_action.c  non_preemptive_sjf_scheduling_algorithm.c  pokemon_occurrence_trigger.c  pokemon_occurrences.c  preemptive_sjf_scheduling_algorithm.c  round_robin_scheduling_algorithm.c  scheduling_algorithm.c  scheduling_algorithm_finder.c  state_transitions.c  team.c  team_broker_connection_handler.c  team_configuration_manager.c  team_gameboy_connection_handler.c  team_logs_manager.c  team_manager.c  team_pretty_prints.c  team_query_performers.c  team_sanitizer.c  team_serializable_objects.c  trainer_thread_context_execution_cycle.c  trainer_thread_context_state_chained_evaluation.c  trainer_threads.c  trainers_parser.c  waiting_actions.c
Utils/: CMakeLists.txt  Makefile
Utils/include/: chained_evaluation.h  common_structures.h  configuration_manager.h  garbage_collector.h  general_logs.h  logger.h  matrix.h  operation_deserialization.h  operation_serialization.h  pokemon_request_bytes_calculator.h  roots.h  (+7 more)
(+17 files in other folders)
